--- a/flex/02-flex-header/style.css
+++ b/flex/02-flex-header/style.css
@@ -1,6 +1,10 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 8px;
 }
 
 .logo {
@@ -13,6 +17,10 @@
 
 ul {
   /* this removes the dots on the list items*/
+  display: flex;
+  gap: 16px;
+  padding: 0;
+  margin: 0;
   list-style-type: none;
 }
 
